--- a/Probando/Probando/Contacto.html
+++ b/Probando/Probando/Contacto.html
@@ -26,12 +26,15 @@
         <h2><strong>Contacto</strong></h2>
         <p>
             <li>
-                Email: <a href="https://mail.google.com/mail/u/0/#inbox?compose=15a12358b5f43bb1">sequeiravalverdejosue@gmail.com</a>
+                Email: <a href="https://mail.google.com/mail/u/0/#inbox?compose=15a12358b5f43bb1" target="_blank">sequeiravalverdejosue@gmail.com</a>
+            </li>
+            <li>
+                Teléfono: 8425-3589
             </li>
             <li>
                 Dirección: Cartago. Tres Ríos. Villas de Ayarco
             </li>
-            
+
         </p>
     </div>
 
