--- a/Probando/Probando/Computacion.html
+++ b/Probando/Probando/Computacion.html
@@ -10,9 +10,9 @@
     <link href="https://file.myfontastic.com/PQBsd2RFTYGJ9Dt6XwyC3k/icons.css" rel="stylesheet">
     <link href="Prueba.css" rel="stylesheet" />
 </head>
-<body>
+<body style="background-color:#ffefc1">
 
-    <div class="jumbotron text-center" style="background-color:burlywood">
+    <div class="jumbotron text-center" style="background-color:#19af91">
         <h1>Josué Sequeira</h1>
         <img src="Images/PicsArt_04-25-10.39.24.jpg" class="img-circle" width="304" height="243" />
         <nav>
@@ -27,19 +27,19 @@
                 <div class="row">
                     <div class="col-md-4">
                         <h2>Por qué?</h2>
-                        <a href=Why.html> <img src="Images/Porqué.png" />  </a>
+                        <a href=Why.html><img src="Images/Why.png" />  </a>
                     </div>
                     <div class="col-md-4">
                         <h2>Cursos</h2>
-                        <a href=Cursos.html><img src="/Images/Cursos.png" /></a>
+                        <a href=Cursos.html><img src="Images/Cursos.PNG" /></a>
                     </div>
                     <div class="col-md-4">
                         <h2>Profesores y compañeros</h2>
-                        <a href=Profs&compas.html><img src="/Images/Prof.jpeg" /></a>
+                        <a href=Profs&compas.html><img src="Images/Prof.PNG" /></a>
                     </div>
                     <div class="col-md-4">
                         <h2>Descargas</h2>
-                        <a href=Descargas.html><img src="/Images/Downloads.jpeg" width="225" height="225" /></a>
+                        <a href=Descargas.html><img src="Images/Downloads.PNG" /></a>
                     </div>
                 </div>
             </ul>
@@ -60,5 +60,5 @@
             </div>
         </div>
     </footer>
-</body>
+</bodystyle="background-color:#ffefc1">
 </html>
