--- a/Probando/Probando/Pasatiempos.html
+++ b/Probando/Probando/Pasatiempos.html
@@ -10,9 +10,9 @@
     <link href="https://file.myfontastic.com/PQBsd2RFTYGJ9Dt6XwyC3k/icons.css" rel="stylesheet">
     <link href="Prueba.css" rel="stylesheet" />
 </head>
-<body>
+<body style="background-color:#ffefc1">
 
-    <div class="jumbotron text-center" style="background-color:burlywood">
+    <div class="jumbotron text-center" style="background-color:#19af91">
         <h1>Josué Sequeira</h1>
         <img src="Images/PicsArt_04-25-10.39.24.jpg" class="img-circle" width="304" height="243" />
 
@@ -22,7 +22,7 @@
 
     </div>
 
-    <div class="jumbotron" Align="center">
+    <div class="jumbotron" Align="center" style="background-color:#ffefc1">
         <h2><strong>Pasatiempos</strong></h2>
         <p>
             <li>
@@ -56,5 +56,5 @@
             </div>
         </div>
     </footer>
-</body>
+</bodystyle="background-color:#ffefc1">
 </html>
