--- a/Probando/Probando/Profs&compas.html
+++ b/Probando/Probando/Profs&compas.html
@@ -10,9 +10,9 @@
     <link href="https://file.myfontastic.com/PQBsd2RFTYGJ9Dt6XwyC3k/icons.css" rel="stylesheet">
     <link href="Prueba.css" rel="stylesheet" />
 </head>
-<body>
+<body style="background-color:#ffefc1">
 
-    <div class="jumbotron text-center" style="background-color:burlywood">
+    <div class="jumbotron text-center" style="background-color:#19af91">
         <h1>Josué Sequeira</h1>
         <img src="Images/PicsArt_04-25-10.39.24.jpg" class="img-circle" width="304" height="243" />
 
@@ -23,7 +23,7 @@
 
     </div>
 
-    <div class="jumbotron" Align="center">
+    <div class="jumbotron" Align="center" style="background-color:#ffefc1">
         <h2><strong>Profesores y compañeros que hayan marcado la diferencia en mí</strong></h2>
         <p>
             <li>
