--- a/Probando/Probando/Descargas.html
+++ b/Probando/Probando/Descargas.html
@@ -1,18 +1,7 @@
 ﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title></title>
-    <meta charset="utf-8" />
-</head>
-<body>
-
-</body>
-</html>
-<!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Objetivos</title>
+    <title>Descargas</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -57,5 +46,5 @@
             </div>
         </div>
     </footer>
-</bodystyle="background-color:#ffefc1">
+</body style="background-color:#ffefc1">
 </html>
